--- a/index.html
+++ b/index.html
@@ -288,10 +288,10 @@
             if (qty != "0") {
                 //get vegetable name    
                 const vegcell = table.rows[currow].cells[0];
-                const vegname = vegcell.innerText;
+                const vegname = vegcell.innerText.trim();
                 //get style
                 const stylecell = table.rows[currow].cells[4];
-                const vegstyle = stylecell.childNodes[1].value;
+                const vegstyle = stylecell.childNodes[1].value.trim();
                 //get Price
                 const pricecell = table.rows[currow].cells[2];
                 var itemprice = pricecell.innerText;
@@ -306,10 +306,13 @@
 
                 // Check whether we need to add/remove from cart
                 var title = curbutton.innerText;
+                // when Item is being added
                 if (title == "Add to Cart") {
+                    // increment Item count
                     itemcount++;
+                    //when first Item is being added, add header to the message
                     if (itemcount == 1) {                                                
-                        orderdetails = "Vegetable  || Style || Qty || Total" + "\n" + "_______________________________" + "\n";
+                        orderdetails = "Vegetable || Style || Qty || Total" + "\n" + "_______________________________" + "\n";
                     }
                     // concatenate the values and add it to final message
                     let curItem = vegname + " || " + vegstyle + " || " + qty + " || " + itemtotal;
@@ -321,7 +324,8 @@
                 else if (title == "Remove from Cart") {
                     // concatenate the values and add it to final message
                     itemcount--;
-                    let remItem = vegname + " || " + vegstyle + " || " + qty + " || " + itemtotal;
+                    // let remItem = vegname + " || " + vegstyle + " || " + qty + " || " + itemtotal;
+                    let remItem = vegname+"||"+vegstyle+"||"+qty+"||"+itemtotal;
                     orderdetails = orderdetails.replace(remItem, "");
                     curbutton.innerText = "Add to Cart";
                     //alert(orderdetails);
