--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
                 <td align="center"><img src="images/Logo Slyze.png" alt="Your Logo" width="30px"></td>
                 <td align="center" class="title">
                     <!-- <h6>Fresh Cut Veggies! Delivered Home</h6>  -->
-                    <!-- <label>Fresh Cut Veggies! Delivered Home</label> -->
-                    <label>Dynamic test</label>
+                    <label>Fresh Cut Veggies! Delivered Home</label>
+                    <!-- <label>Dynamic test</label> -->
                 </td>
                 <td align="center"><img src="images/Text Slyze.png" alt="Your Logo" width="70px"></td>
             </tr>
