--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <!-- <title>Vegetable Purchase - Slyze</title> -->
-    <title>Dynamic Test</title>
+    <title>Vegetable Purchase - Slyze</title>
+    <!-- <title>Dynamic Test</title> -->
     <script src="slyzevalues.js"></script>
     <script src="slyzescript.js"></script>    
     <link rel="stylesheet" href="slyzestyle.css">
