--- a/index.html
+++ b/index.html
@@ -16,15 +16,20 @@
     <!-- <img src="data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'%3E%3Ctext x='0' y='50' font-family='Verdana' font-size='35' fill='blue'%3ESlyze%3C/text%3E%3C/svg%3E" alt="Slyze Logo"> -->
     <!-- </header> -->
     <div class="container">
-        <table width="100%" border="1">
+        <table width="100%" border="0">
             <tr>
-                <td align="center"><img src="images/Logo Slyze.png" alt="Your Logo" width="30px"></td>
-                <td align="center" class="title">
-                    <!-- <h6>Fresh Cut Veggies! Delivered Home</h6>  -->
+                <td align="center" width="7%"><img src="images/Logo Slyze.png" alt="Your Logo" width="30px"></td>
+                <td align="center">
+                    <!-- <h4>Fresh Cut Veggies! Delivered Home</h4>  -->
                     <label>Fresh Cut Veggies! Delivered Home</label>
                     <!-- <label>Dynamic test</label> -->
                 </td>
-                <td align="center"><img src="images/Text Slyze.png" alt="Your Logo" width="70px"></td>
+                <td align="center" width="10%">
+                    <img src="images/Text Slyze.png" alt="Your Logo" width="90px">
+                    </td>
+                    <td align="center" width="5%">
+                    <img  src="images/Vegetarian.png" alt="Your Logo" width="20px">
+                </td>
             </tr>
         </table>
         <!-- <p>Please enter your Name, phone number & Address. Select the vegetables, Required Quantity and Chopping Style: </p> -->
