--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                 <td align="center" width="7%"><img src="images/Logo Slyze.png" alt="Your Logo" width="30px"></td>
                 <td align="center">
                     <!-- <h4>Fresh Cut Veggies! Delivered Home</h4>  -->
-                    <label>Fresh Cut Veggies! Delivered Home</label>
+                    <label>Fresh Cut Veggies!  Delivered Home!</label>
                     <!-- <label>Dynamic test</label> -->
                 </td>
                 <td align="center" width="10%">
@@ -102,7 +102,7 @@
                 </tr>
                 <tr>
                     <td align="left">
-                        <label>No. of Items in Cart</label>
+                        <label>No.of Items in the Cart:</label>
                         <label id="itemcount"></label>
                     </td>
                     <td align="left">
@@ -128,7 +128,7 @@
                 <!-- Header Row    -->
                 <tr>
                     <td align="left"><label>Vegetable</label></td>
-                    <td><label>Weight (Gms.)</label></td>
+                    <td><label>Weight (gms.)</label></td>
                     <td><label>Price (Rs.)</label></td>
                     <td><label>Quantity </label></td>
                     <td><label>Chopping Style</label></td>
