--- a/index.html
+++ b/index.html
@@ -102,12 +102,13 @@
                 </tr>
                 <tr>
                     <td align="left">
-                        <label>No.of Items in the Cart:</label>
+                        <label>No.of Items:</label>
                         <label id="itemcount"></label>
                     </td>
                     <td align="left">
-                        <label>Total Cart Value (Rs.)</label>
+                        <label>Cart Value (Rs.)</label>
                         <label id="itemtotal"></label>
+                        <label class="notes">; inclusive of Delivery fee</label>
                     </td>
                     <td>
                         <button class="button" type="button" onclick="submitToWhatsApp()">Order on WhatsApp</button>
