--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <!-- <img src="data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'%3E%3Ctext x='0' y='50' font-family='Verdana' font-size='35' fill='blue'%3ESlyze%3C/text%3E%3C/svg%3E" alt="Slyze Logo"> -->
     <!-- </header> -->
     <div class="container">
-        <table width="100%" border="0">
+        <table width="100%" border="0" id="title">
             <tr>
                 <td align="center" width="7%"><img src="images/Logo Slyze.png" alt="Your Logo" width="30px"></td>
                 <td align="center">
@@ -116,7 +116,7 @@
                     </td>
                 </tr>
             </Table>
-            <table border="1" width="100%">
+            <table border="1" width="100%" id="banner">
                 <tr>
                     <td align="center">
                         <img src="images/Veg Shape Banner.png" alt="Your Logo" width="100%">
@@ -140,7 +140,9 @@
             </table>
 
             <br>
-            <button class="submit" type="button" onclick="submitToWhatsApp()">Order on WhatsApp</button>
+            <button class="submit" type="button" onclick="submitToWhatsApp()" id="order">Order on WhatsApp</button>
+            <h3 id="orderclosed"></h3>
+            <h3 id="queries"></h3>
         </form>
     </div>
 </body>
