--- a/index.html
+++ b/index.html
@@ -104,14 +104,20 @@
                     <td align="left">
                         <label>No.of Items:</label>
                         <label id="itemcount"></label>
-                    </td>
-                    <td align="left">
+                    <!-- </td> -->
+                    <!-- <td align="left"> -->
+                    <br>    
                         <label>Cart Value (Rs.)</label>
                         <label id="itemtotal"></label>
+                    <br>    
                         <label class="notes">; inclusive of Delivery fee</label>
                     </td>
-                    <td>
+                    <td vertical-align="middle">                        
                         <button class="button" type="button" onclick="submitToWhatsApp()">Order on WhatsApp</button>
+                        <!-- <button type="button" onclick="submitToWhatsApp()">Order on WhatsApp</button> -->
+                        <img class="button" src="images/whatsapp.png" width="22">
+                    </td>
+                    <td>    
                         <button class="button" type="button" onclick="resetcart()">Reset Cart</button>
                     </td>
                 </tr>
