--- a/index.html
+++ b/index.html
@@ -107,10 +107,10 @@
                     </td>
                     <td align="left">
                     <br>    
-                        <label>Cart Value (Rs.)</label>
+                        <label>Cart Value (Rs.):</label>
                         <label id="itemtotal"></label>
                     <br>    
-                        <label class="notes">; inclusive of Delivery fee</label>
+                        <label class="notes">;inclusive of Delivery fee</label>
                     </td>
                     <td vertical-align="middle">                        
                         <!-- <button class="button" type="button" onclick="submitToWhatsApp()">Order on WhatsApp</button> -->
