--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
                     <td><label>Price (Rs.)</label></td>
                     <td><label>Quantity </label></td>
                     <td><label>Chopping Style</label></td>
-                    <td><label>Cart</label></td>
+                    <td width="20%"><label>Cart</label></td>
                 </tr>
 
 
